correct getAll and getByID, add to swagger
